force-app/main/default/objects/VILigne_comptable__c/VILigne_comptable__c.object-meta.xml
<CustomObject>
    <label>Ligne comptable</label>
    <nameField>
        <displayFormat>L{000000000}</displayFormat>
        <label>Ref de la ligne comptable</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lignes comptables</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>