force-app/main/default/objects/VILigne_comptable__c/fields/Affaire__c.field-meta.xml
<CustomField>
    <fullName>Affaire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Lignes comptables (Affaire)</relationshipLabel>
    <relationshipName>Ecritures_comptables</relationshipName>
    <type>Lookup</type>
</CustomField>