force-app/main/default/objects/VILigne_comptable__c/fields/Affaire_de_rattachement__c.field-meta.xml
<CustomField>
    <fullName>Affaire_de_rattachement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affaire de rattachement</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Lignes comptables (Affaire de rattachement)</relationshipLabel>
    <relationshipName>Lignes_comptables</relationshipName>
    <type>Lookup</type>
</CustomField>