force-app/main/default/objects/VILigne_comptable__c/fields/Centre__c.field-meta.xml
<CustomField>
    <fullName>Centre__c</fullName>
    <label>Centre</label>
    <length>3</length>
    <type>Text</type>
</CustomField>