force-app/main/default/objects/VILigne_comptable__c/fields/Chapitre__c.field-meta.xml
<CustomField>
    <fullName>Chapitre__c</fullName>
    <label>Chapitre</label>
    <length>2</length>
    <type>Text</type>
</CustomField>