force-app/main/default/objects/VILigne_comptable__c/fields/Compte_comptable_groupe__c.field-meta.xml
<CustomField>
    <fullName>Compte_comptable_groupe__c</fullName>
    <label>Compte comptable groupe</label>
    <length>12</length>
    <type>Text</type>
</CustomField>