force-app/main/default/objects/VILigne_comptable__c/fields/CompteComptable_local__c.field-meta.xml
<CustomField>
    <fullName>CompteComptable_local__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Compte comptable local</label>
    <referenceTo>VICompte_general__c</referenceTo>
    <relationshipLabel>Lignes comptables</relationshipLabel>
    <relationshipName>Lignes_comptables</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>