force-app/main/default/objects/VILigne_comptable__c/fields/Date_ecriture__c.field-meta.xml
<CustomField>
    <fullName>Date_ecriture__c</fullName>
    <label>Date écriture</label>
    <type>Date</type>
</CustomField>