force-app/main/default/objects/VILigne_comptable__c/fields/Ligne_affaire_mensuelle__c.field-meta.xml
<CustomField>
    <fullName>Ligne_affaire_mensuelle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ligne d&apos;affaire mensuelle</label>
    <referenceTo>VILigne_d_affaire_mensuelle__c</referenceTo>
    <relationshipLabel>Lignes comptables</relationshipLabel>
    <relationshipName>Lignes_comptables</relationshipName>
    <type>Lookup</type>
</CustomField>