force-app/main/default/objects/VILigne_comptable__c/fields/Montant_avec_signe__c.field-meta.xml
<CustomField>
    <fullName>Montant_avec_signe__c</fullName>
    <formula>if( text(Sens__c) =&apos;C&apos;, Montant__c * (-1) , Montant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Montant avec signe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>