force-app/main/default/objects/VILigne_comptable__c/fields/Periode_comptable__c.field-meta.xml
<CustomField>
    <fullName>Periode_comptable__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Période comptable</label>
    <referenceTo>VIPeriode__c</referenceTo>
    <relationshipName>Ecritures_comptables</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>