force-app/main/default/objects/VILigne_comptable__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <label>Référence</label>
    <length>255</length>
    <type>Text</type>
</CustomField>