force-app/main/default/objects/VILigne_comptable__c/fields/Statut_ecriture_comptable__c.field-meta.xml
<CustomField>
    <fullName>Statut_ecriture_comptable__c</fullName>
    <defaultValue>&apos;10&apos;</defaultValue>
    <label>Statut écriture comptable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Statut_ecriture_comptable</valueSetName>
    </valueSet>
</CustomField>