force-app/main/default/objects/VILigne_comptable__c/fields/Type_de_depense__c.field-meta.xml
<CustomField>
    <fullName>Type_de_depense__c</fullName>
    <label>Type de dépense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>