force-app/main/default/objects/VILigne_comptable__c/fields/Type_enregistrement__c.field-meta.xml
<CustomField>
    <fullName>Type_enregistrement__c</fullName>
    <label>Type d&apos;enregistrement</label>
    <length>1</length>
    <type>Text</type>
</CustomField>