force-app/main/default/objects/VILigne_comptable__c/fields/Type_ligne_comptable__c.field-meta.xml
<CustomField>
    <fullName>Type_ligne_comptable__c</fullName>
    <label>Type ligne comptable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_ligne_comptable</valueSetName>
    </valueSet>
</CustomField>