force-app/main/default/objects/VILigne_comptable__c/validationRules/pas_de_modif_si_periode_close.validationRule-meta.xml
<ValidationRule>
    <fullName>pas_de_modif_si_periode_close</fullName>
    <active>false</active>
    <errorConditionFormula>or(
left(text( Periode_comptable__r.Statut__c ),2) = &apos;30&apos;,
left(text( Periode_comptable__r.Statut__c ),2) = &apos;90&apos;
)</errorConditionFormula>
    <errorMessage>Il n&apos;est pas possible de modifier une écriture comptable sur une période close</errorMessage>
</ValidationRule>