force-app/main/default/objects/VILigne_comptable__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affaire__c</columns>
    <columns>Affaire_de_rattachement__c</columns>
    <columns>Compte_comptable_groupe__c</columns>
    <columns>CompteComptable_local__c</columns>
    <columns>Periode_comptable__c</columns>
    <columns>Libelle__c</columns>
    <columns>Sens__c</columns>
    <columns>Montant__c</columns>
    <columns>Statut_ecriture_comptable__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>